--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lauryn's Coding Quiz</title>
-    <link rel="stylesheet" href="C:\Users\Lauryn\Documents\GitHub\Lauryns-coding-quiz\style.css">
+    <link rel="stylesheet" href="C:\Users\Lauryn\Documents\GitHub\Lauryns-coding-quiz\assets\style.css">
 </head>
 <body>
     <!-- header and title -->
@@ -35,7 +35,7 @@
 
     </section>
     
-    <script src="C:\Users\Lauryn\Documents\GitHub\Lauryns-coding-quiz\script.js"></script>
+    <script src="C:\Users\Lauryn\Documents\GitHub\Lauryns-coding-quiz\assets\script.js"></script>
     
 </body>
 </html>
