--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lauryn's Coding Quiz</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="C:\Users\Lauryn\Desktop\carl-ott-fsf-pt-02-2021-u-c\04-Web-APIs\02-Homework\style.css">
+    <link rel="stylesheet" href="assets/style.css">
 
 </head>
 <body>
@@ -47,6 +47,6 @@
     
 </body>
 
-<script src="C:\Users\Lauryn\Desktop\carl-ott-fsf-pt-02-2021-u-c\04-Web-APIs\02-Homework\script.js"></script>
+<script src="assets/script.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </html>
